// 3.5 ER-диаграмма основной БД (PostgreSQL) — AI Data Engineer Assistant
// Открыть и отрендерить: https://dbdiagram.io/d  (вставить содержимое целиком).
// Экспорт: PNG / PDF / SQL DDL / MySQL Workbench / dbml CLI.

Project ai_data_engineer_assistant {
  database_type: 'PostgreSQL'
  Note: '''
    Основная БД приложения (контейнер `postgres`, схема `public`).
    Источник истины — SQLAlchemy модели в `backend/app/models.py`.
  '''
}

Table app_users {
  id varchar(36) [pk]
  email varchar(255) [unique, not null]
  full_name varchar(255) [not null]
  role varchar(32) [not null, default: 'engineer', note: 'engineer | admin']
  status varchar(32) [not null, default: 'active', note: 'active | invited | disabled']
  password_hash text [not null]
  invite_token varchar(128)
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    email [unique]
  }
}

Table database_connections {
  id varchar(36) [pk]
  name varchar(255) [not null]
  engine varchar(32) [not null, note: 'postgres | mysql | clickhouse | mongo | redis']
  host varchar(255) [not null]
  port int [not null]
  database varchar(255)
  username varchar(255)
  password_secret text
  options_json jsonb
  visibility varchar(32) [not null, default: 'private', note: 'private | shared']
  owner_user_id varchar(36) [ref: > app_users.id, note: 'NULL для shared demo-подключений']
  status varchar(32) [not null, default: 'unknown']
  last_error text
  last_tested_at timestamptz
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    name
    engine
    owner_user_id
  }
}

Table agent_sessions {
  id varchar(36) [pk]
  user_id varchar(36) [not null, ref: > app_users.id]
  title varchar(255) [not null, default: 'New session']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table messages {
  id varchar(36) [pk]
  session_id varchar(36) [not null, ref: > agent_sessions.id]
  role varchar(32) [not null, note: 'user | assistant | system | tool']
  content text [not null]
  metadata_json jsonb [note: 'tool_calls, ui_actions, провайдер LLM, latency_ms']
  created_at timestamptz [not null, default: `now()`]
}

Table tool_runs {
  id varchar(36) [pk]
  session_id varchar(36) [not null, ref: > agent_sessions.id]
  message_id varchar(36) [ref: > messages.id]
  tool_name varchar(64) [not null, note: 'execute_sql, trigger_airflow_dag, write_airflow_dag, call_mcp_tool, ...']
  status varchar(32) [not null, default: 'success', note: 'success | error']
  input_json jsonb [not null]
  output_json jsonb [not null]
  latency_ms int [not null, default: 0]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    tool_name
  }
}

Table pipeline_runs {
  id varchar(36) [pk]
  dag_id varchar(255) [not null]
  run_id varchar(255) [not null]
  status varchar(32) [not null, default: 'queued', note: 'queued | running | success | failed']
  conf_json jsonb
  external_url text [note: 'ссылка на Airflow UI']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    dag_id
    run_id
  }
}

Table pipeline_states {
  dag_id varchar(255) [pk]
  is_paused boolean [not null, default: false]
  source varchar(64) [not null, default: 'local', note: 'local | airflow']
  updated_at timestamptz [not null, default: `now()`]
}

Table spark_jobs {
  id varchar(36) [pk]
  job_id varchar(255) [not null]
  name varchar(255) [not null]
  status varchar(32) [not null, default: 'submitted', note: 'submitted | running | success | failed']
  app_resource text [not null, note: 'путь к Spark-скрипту']
  params_json jsonb
  result_sample_json jsonb [note: 'фрагмент результата для UI']
  driver_log text
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    job_id
  }
}

Table artifact_versions {
  id varchar(36) [pk]
  artifact_type varchar(32) [not null, note: 'dag | spark']
  artifact_name varchar(255) [not null]
  path text [not null, note: 'infra/users/<user_id>/...']
  version int [not null, default: 1]
  content_hash varchar(64) [not null]
  message text [not null, default: '']
  author_user_id varchar(36) [ref: > app_users.id, note: 'soft reference, без ON DELETE']
  validation_status varchar(32) [not null, default: 'unknown', note: 'ok | error | unknown']
  validation_output text
  git_status varchar(32) [not null, default: 'unknown', note: 'committed | dirty | error | unknown']
  git_repository text
  git_commit_sha varchar(64)
  git_commit_short_sha varchar(16)
  git_error text
  created_at timestamptz [not null, default: `now()`]

  indexes {
    artifact_type
    artifact_name
    content_hash
  }
}

// Логические группы для визуальной раскладки
TableGroup users_and_access {
  app_users
  database_connections
}

TableGroup agent_history {
  agent_sessions
  messages
  tool_runs
}

TableGroup workloads {
  pipeline_runs
  pipeline_states
  spark_jobs
}

TableGroup artifacts {
  artifact_versions
}
